changed a number of translations

--- a/config/locales/defaults/en.yml
+++ b/config/locales/defaults/en.yml
@@ -155,12 +155,12 @@ en:
     currency:
       format:
         delimiter: ","
-        format: "%u%n"
+        format: "%n %u"
         precision: 2
         separator: "."
         significant: false
         strip_insignificant_zeros: false
-        unit: "$"
+        unit: "Ush"
     format:
       delimiter: ","
       precision: 3
